// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`abis wasm bindings computes a contract address 1`] = `
AztecAddress {
  "buffer": {
    "data": [
      41,
      192,
      217,
      148,
      133,
      32,
      218,
      135,
      246,
      161,
      88,
      153,
      63,
      191,
      30,
      214,
      196,
      252,
      107,
      172,
      62,
      94,
      169,
      6,
      206,
      197,
      193,
      242,
      244,
      238,
      121,
      38,
    ],
    "type": "Buffer",
  },
}
`;

exports[`abis wasm bindings computes a function leaf 1`] = `
Fr {
  "value": 10724872372058747971865607189197215883616299259274114995580068674650484136837n,
}
`;

exports[`abis wasm bindings computes a function selector 1`] = `
{
  "data": [
    169,
    5,
    156,
    187,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings computes contract leaf 1`] = `
Fr {
  "value": 14753252017424563237038015065402454919037294146339173328174383872613705551896n,
}
`;

exports[`abis wasm bindings computes function tree root 1`] = `
Fr {
  "value": 12906610331695443491500387150847739068531523218659917858520872318692742082976n,
}
`;

exports[`abis wasm bindings hash constructor info (max args) 1`] = `
{
  "data": [
    32,
    9,
    184,
    6,
    115,
    133,
    187,
    172,
    247,
    174,
    107,
    211,
    216,
    131,
    79,
    178,
    74,
    230,
    247,
    109,
    78,
    114,
    204,
    25,
    222,
    161,
    147,
    242,
    206,
    4,
    186,
    255,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hash constructor info 2 args 1`] = `
{
  "data": [
    33,
    148,
    40,
    1,
    123,
    223,
    247,
    83,
    197,
    158,
    156,
    14,
    132,
    167,
    243,
    227,
    12,
    73,
    206,
    63,
    62,
    29,
    229,
    214,
    253,
    8,
    97,
    93,
    76,
    63,
    166,
    71,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes VK 1`] = `
{
  "data": [
    6,
    253,
    89,
    90,
    215,
    106,
    13,
    185,
    7,
    12,
    226,
    61,
    233,
    146,
    178,
    30,
    126,
    242,
    92,
    49,
    104,
    242,
    227,
    172,
    206,
    117,
    147,
    59,
    149,
    215,
    18,
    74,
  ],
  "type": "Buffer",
}
`;

exports[`abis wasm bindings hashes a tx request 1`] = `
{
  "data": [
    39,
    119,
    99,
    102,
    124,
    176,
    117,
    163,
    36,
    96,
    6,
    247,
    200,
    138,
    45,
    113,
    176,
    73,
    221,
    196,
    59,
    170,
    153,
    63,
    86,
    54,
    222,
    93,
    79,
    147,
    8,
    10,
  ],
  "type": "Buffer",
}
`;
